# aoc

./: .gitignore  Cargo.toml  README.md  flake.nix  profile.json
benches/: day03.rs  day06.rs  days.rs
src/: lib.rs  main.rs
src/solutions/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07 copy.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  example.rs
