[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "aoc"
path = "src/lib.rs"

[[bin]]
name = "aoc"
path = "src/main.rs"

[dependencies]
nom = "*"
priority-queue = "*"
rustc-hash = "*"
itertools = "*"
rayon = "*"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "days"
harness = false
