[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "aoc"
path = "src/lib.rs"

[[bin]]
name = "aoc"
path = "src/main.rs"

[dependencies]
nom = "7.1.3"
priority-queue = "1.3.2"
rustc-hash = "1.1.0"
itertools = "0.12.0"
rayon = "1.8.0"
smallvec = "1.11.2"
once_cell = "1.18.0"
regex = "1.10.2"
bitvec = "1.0.1"
num = "0.4.1"
grid = "0.12.0"
indicatif = { version = "0.17.7", features = ["rayon"] }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "days"
harness = false

[profile.profiling]
inherits = "release"
debug = true